[gd_scene load_steps=12 format=3 uid="uid://dadd8yochwt2d"]

[ext_resource type="Texture2D" uid="uid://ca42u7yrlpaxx" path="res://assets/sprites/UI/Button/Rect/ContinueBTN.png" id="1_lhpe2"]
[ext_resource type="Script" path="res://game/systems/main_menu.gd" id="1_q8p7e"]
[ext_resource type="Texture2D" uid="uid://bcttpdks3uwx1" path="res://assets/sprites/UI/Button/Rect/Default.png" id="1_ygxsg"]
[ext_resource type="Texture2D" uid="uid://dllpgpeqewr5o" path="res://assets/sprites/UI/Button/Rect/ContinueBTN_Hover.png" id="3_s3u82"]
[ext_resource type="Texture2D" uid="uid://bk3oegk53378m" path="res://assets/sprites/UI/Button/Rect/NewgameBTN.png" id="4_kmdho"]
[ext_resource type="Texture2D" uid="uid://dj3vq4e4hmg2x" path="res://assets/sprites/UI/Button/Rect/NewgameBTN_Hover.png" id="5_uwill"]
[ext_resource type="Texture2D" uid="uid://c6omojbdrtyf1" path="res://assets/sprites/UI/Button/Rect/SettingsBTN.png" id="6_q782g"]
[ext_resource type="Texture2D" uid="uid://dxegsm2sfg6r" path="res://assets/sprites/UI/Button/Rect/SettingsBTN_Hover.png" id="7_uqp3v"]
[ext_resource type="Texture2D" uid="uid://s6ebw5bobvgi" path="res://assets/sprites/UI/Button/Rect/QuitBTN.png" id="8_n4k1j"]
[ext_resource type="Texture2D" uid="uid://pl847blfilpb" path="res://assets/sprites/UI/Button/Rect/QuitBTN_Hover.png" id="9_qw4a7"]
[ext_resource type="PackedScene" uid="uid://dt867ndl8axqy" path="res://game/gui/setting.tscn" id="10_nhxpi"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_q8p7e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_lhpe2")
texture_pressed = ExtResource("1_ygxsg")
texture_hover = ExtResource("3_s3u82")

[node name="NewGameButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_kmdho")
texture_pressed = ExtResource("1_ygxsg")
texture_hover = ExtResource("5_uwill")

[node name="SettingsButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_q782g")
texture_pressed = ExtResource("1_ygxsg")
texture_hover = ExtResource("7_uqp3v")

[node name="QuitButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_n4k1j")
texture_pressed = ExtResource("1_ygxsg")
texture_hover = ExtResource("9_qw4a7")

[node name="Setting" parent="Control" instance=ExtResource("10_nhxpi")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.987
anchor_top = 0.026
anchor_right = 0.987
anchor_bottom = 0.026
grow_horizontal = 0
hasPause = false

[connection signal="pressed" from="Control/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
